inc progress sheet height

--- a/lib/utils/colors.scss
+++ b/lib/utils/colors.scss
@@ -5,4 +5,5 @@ $bg: #303030;
 $bg-new: rgb(33, 33, 33);
 $color: #42a5f5;
 $ic_bg_color: #eeeeee;
-$primary-cont:  #19484b
+$primary-cont:  #19484b;
+$primary-cont-2: rgb(31, 107, 112);
